@@ -1,0 +1,15 @@
+<body onload = "test()">
+<p>Test that accessing a detached iframe's applicationCache window property doesn't assert. If you don't see an assert, it passed.</p>
+<iframe src="about:blank"></iframe>
+<script>
+if (window.layoutTestController)
+    layoutTestController.dumpAsText();
+
+function test()
+{
+    var ifr = frames[0];
+    document.body.removeChild(document.getElementsByTagName("iframe")[0]);
+    ifr.applicationCache;
+}
+</script>
+</body>
